--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </nav>
   <div class="container background">
     <div class="input-section">
-      <input type="text" id="cityInput" placeholder="Enter city name">
+      <input type="search" id="cityInput" placeholder="Enter city name">
       <button id="searchBtn">	
         <i class="fa fa-search"></i></button>
     </div>
@@ -19,7 +19,12 @@
       <div id="box"></div>
     </div>
   </div>
-
+  <footer>
+    <div class="footer-content">
+      <p>&copy; 2023 Weather Forecast App</p>
+      <p class="weather-api">Powered by OpenWeatherMap API</p>
+    </div>
+  </footer>
   <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/05cf97a7a1.js" crossorigin="anonymous"></script>
 </body>
