--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta name="google-site-verification" content="87wTD9ZErtbCRpyhyg1BcTAnr92Q3BlMGjfT4WrWTt8" />
   <title>Weather Application</title>
