--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta name="google-site-verification" content="87wTD9ZErtbCRpyhyg1BcTAnr92Q3BlMGjfT4WrWTt8" />
   <title>Weather Application</title>
   <link rel="stylesheet" type="text/css" href="style.css">
